--- a/css/main.css
+++ b/css/main.css
@@ -23,49 +23,83 @@ h3 {
 
 main {
   max-width: 100vw;
-  padding: 40px;
+  padding: 20px;
 }
+
+@media (min-width: 767px) {
+  main {
+    padding: 40px;
+  }
+}
+
+
 
 h1 {
   margin-bottom: .5rem;
 }
 
 section {
-  -webkit-column-count: 4;
-  column-count: 4;
-  -webkit-column-gap: 15px;
-  column-gap: 15px;
+  -webkit-column-count: 1;
+  column-count: 1;
 }
+
+@media (min-width: 767px) {
+  section {
+    -webkit-column-count: 2;
+    column-count: 2;
+    -webkit-column-gap: 15px;
+    column-gap: 15px;
+  }
+}
+
+@media (min-width: 1024px) {
+  section {
+    -webkit-column-count: 3;
+    column-count: 3;
+  }
+}
+
+@media (min-width: 1400px) {
+  section {
+    -webkit-column-count: 4;
+    column-count: 4;
+  }
+}
+
+
 
 .checkin {
   background-color: #eee;
   display: inline-block;
-  margin: 0 0 15px;
-  width: 100%; 
   position: relative;
+  width: calc(100% - 15px);
   padding: 15px;
-  border: 1px solid #ddd;
-  box-shadow: 0 5px teal;
+  border: 1px solid #fff;
+  box-shadow: 0 3px teal;
+  margin: 10px 0 30px 10px;
 }
 
 .user {
-  margin-bottom: 15px;
+  margin: -25px 0 15px -25px;
 }
 
 .user-img {
   margin-right: 15px;
+  width: 75px;
+  height: 75px;
+  box-shadow: 3px 3px 6px rgba(0,0,0,.3);
 }
 
 .user-name {
-  font-size: 1.1rem;
+  font-size: 1.25rem;
   font-weight: 300;
   letter-spacing: 1px;
-  margin: 20px 0 0 0;
+  margin: 25px 0 5px 0;
 }
 
 .date {
   display: block;
-  font-size: .8rem;
+  font-size: .75rem;
   text-transform: uppercase;
   font-weight: 600;
 }
@@ -80,29 +114,61 @@ section {
   color: teal;
   text-shadow: 0 1px #fff;
   margin: 0;
+  font-size: 2rem;
 }
 
 .brewery {
-  margin-top: 0;
+  margin-top: 5px;
   text-transform: uppercase;
   font-size: .9rem;
+  font-weight: 400;
 }
 
 .photo {
   width: 100%;
   margin: 15px 0;
+  box-shadow: 3px 3px 6px rgba(0,0,0,.3);
 }
 
+.rating {
+  font-family: fontAwesome;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 3rem;
+  color: lightsalmon;
+  text-align: center;
+  margin-top: 15px;
+}
 
+.rating.r5:after { content: '\f123 \f006 \f006 \f006 \f006'; }
+.rating.r10:after { content: '\f005 \f006 \f006 \f006 \f006'; }
+.rating.r15:after { content: '\f005 \f123 \f006 \f006 \f006'; }
+.rating.r20:after { content: '\f005 \f005 \f006 \f006 \f006'; }
+.rating.r25:after { content: '\f005 \f005 \f123 \f006 \f006'; }
+.rating.r30:after { content: '\f005 \f005 \f005 \f006 \f006'; }
+.rating.r40:after { content: '\f005 \f005 \f005 \f005 \f006'; }
+.rating.r45:after { content: '\f005 \f005 \f005 \f005 \f123'; }
+.rating.r50:after { content: '\f005 \f005 \f005 \f005 \f005'; }
 
 h1 {
   font-size: 4rem;
-  margin-top: 0;
+  margin: 0 0 40px;
   font-weight: 300;
+  text-transform: capitalize;
+  color: teal;
+  text-shadow: 2px 2px 0px lightsalmon, 4px 4px teal, 6px 6px lightsalmon;
 }
 
 img {
   max-width: 100%;
+}
+
+footer {
+  text-align: center;
+  margin-top: 50px;
+  background: teal;
+  color: #fff;
+  padding: 20px;
 }
 
 
